@@ -1,6 +1,8 @@
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
-MD5 7a3300d09b2f912b26925261fa1fce47 ChangeLog 1504
-MD5 cf672d4f28257c72fd2f70079d2113f2 mamory-0.2.17.ebuild 764
 MD5 0bf8ea569956656a274b9bdc5223eca2 mamory-0.2.18.ebuild 760
+MD5 cf672d4f28257c72fd2f70079d2113f2 mamory-0.2.17.ebuild 764
+MD5 89f73a0f98171201ef269a21f025ff48 mamory-0.2.19.ebuild 763
+MD5 bbc51f3c06bb2345cbb45944c596ebda ChangeLog 1633
 MD5 40031d09f6a9850cabd22f3172c0e771 files/digest-mamory-0.2.17 65
 MD5 dfc65132a1943d7c5e79571d6ae100a3 files/digest-mamory-0.2.18 65
+MD5 443aa46a1059b6341a9e4b9eb1eb9d7b files/digest-mamory-0.2.19 65
