@@ -1,0 +1,1 @@
+MD5 a688843a4b9950d75877cf8af6b4bc8f mamory-0.2.19.tar.gz 494181
