@@ -1,0 +1,32 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/games-emulation/cvs-repo/gentoo-x86/games-emulation/mamory/Attic/mamory-0.2.19.ebuild,v 1.1 2005/05/26 16:46:03 mr_bones_ Exp $
+
+inherit games
+
+DESCRIPTION="rom management tools and library"
+HOMEPAGE="http://mamory.sourceforge.net/"
+SRC_URI="mirror://sourceforge/mamory/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="ppc x86"
+IUSE=""
+
+DEPEND=""
+RDEPEND=""
+
+src_compile() {
+	egamesconf \
+		--disable-debug \
+		--disable-dependency-tracking \
+		--includedir=/usr/include || die
+	emake || die "emake failed"
+}
+
+src_install() {
+	make DESTDIR="${D}" install || die "make install failed"
+	dodoc AUTHORS ChangeLog README TODO
+	dohtml DOCS/mamory.html
+	prepgamesdirs
+}
