@@ -1,6 +1,12 @@
 # ChangeLog for games-emulation/mamory
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-emulation/cvs-repo/gentoo-x86/games-emulation/mamory/ChangeLog,v 1.11 2005/05/01 17:24:35 hansmi Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-emulation/cvs-repo/gentoo-x86/games-emulation/mamory/ChangeLog,v 1.12 2005/05/26 16:46:03 mr_bones_ Exp $
+
+*mamory-0.2.19 (26 May 2005)
+
+  26 May 2005; Michael Sterrett <mr_bones_@gentoo.org>
+  +mamory-0.2.19.ebuild:
+  version bump
 
   01 May 2005; Michael Hanselmann <hansmi@gentoo.org> mamory-0.2.18.ebuild:
   Stable on ppc.
